# LibLearner

./: .gitignore  README.md  requirements.txt
code_extraction/python/: Extract_Python_Functions.py  pyproject.toml  setup.py
code_extraction/python/code_extractor/: __init__.py  parser.py
code_extraction/python/tests/: conftest.py  test_parser.py
code_extraction/python/tests/test_files/: simple_function.py
extract_python/: README.md  __init__.py  code_analyzer.py  config.py  dataframe_tree.py  dataframe_tree_analyzer.py  documentize_dataframe_tree.py  exceptions.py  extract_data_structures.py  extract_functions.py
liblearner/: README.md  package-lock.json  package.json  requirements.txt  setup.py
liblearner/liblearner/: __init__.py  file_processor.py  file_type_detector.py  javascript_extractor.js  processing_result.py  python_extractor.py
liblearner/liblearner/processors/: __init__.py  javascript_processor.py  json_processor.py  jupyter_processor.py  markdown_processor.py  mdx_processor.py  processor_README.md  processor_integration_README.md  python_processor.py  shell_processor.py  yaml_processor.py
liblearner/tests/: __init__.py  manual_test_js_processor.py  test_csv.py  test_extractor.py  test_file_processor.py  test_javascript_processor.py  test_js_statements.js  test_jupyter_processor.py  test_markdown_processor.py  test_mdx_processor.py  test_processor.py  test_processor_integration.py  test_python_processor.py  test_registry.py  test_scout_extensions.py  test_yaml_processor.py
liblearner/utils/: observables_scraper  rebuild_scraper.js  report_json
(+27 files in other folders)
